[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RefEquiv"
dynamic = ["version"]
authors = [
    { name = "焱铭", email = "lxb-yanming@foxmail.com" },
]
description = "制冷剂等效气相物性计算器 - 基于REFPROP的两相制冷剂等效单相物性计算工具"
keywords = ["制冷剂", "物性", "REFPROP"]
dependencies = [
    "ctrefprop>=0.10.5",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "rich>=15.0.0",
]
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/YanMing-lxb"
"Bug Tracker" = "https://github.com/YanMing-lxb"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.setuptools.dynamic]
version = { attr = "version.__version__" }

[dependency-groups]
dev = [
    "pyinstaller>=6.14.2",
    "setuptools>=80.9.0",
    "wheel>=0.45.0",
]
